--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -3673,6 +3673,8 @@ class UIManager {
 
                     // Optional: Update the stored timestamp so we don't spam the user
                     // this.initialTimestamp = newTimestamp;
+                }else{
+                    console.log('no updates')
                 }
             }
 
