--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -9,7 +9,7 @@
     <script src="lib/mqtt.min.js"></script>
     <script src="lib/puter-v2.min.js"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Geo&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Geo');
 
         /* CSS Reset & Normalization */
         * {
